# Reverser

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-macos-app.yml  build-release-artifacts.yml  pytest.yml
artifacts/external-targets/rs2client-947/: external-tool-inventory-hackingtool-reverse-engineering.json  external-tool-inventory-local-ida-free.json  js5-v97-auth-opcode-probe-summary.json  (+1171 more)
packaging/macos/: Reverser.spec
packaging/windows/: Reverser.spec
pcscript/: manifest.json
script/: manifest.json
scripts/: GhidraCallsiteArgsPy.py  GhidraDumpWindowsPy.py  GhidraFindRefsPy.py  GhidraFindScalarBytesPy.py  GhidraReadCStringPy.py  GhidraReadPdataPy.py  GhidraReadQwordsPy.py  GhidraWin64StackArgsPy.py  build-macos-app.sh  build-windows-app.ps1  extract-conquer-protected-archives.ps1  ghidra_dump_functions.py
src/reverser/: __init__.py  __main__.py  api.py  app.py  catalog.py  models.py  schema.py
tests/: __init__.py  helpers_netdragon.py  test_api.py  test_catalog.py  test_cli.py  test_cli_module_entrypoint.py  test_conquer_animation.py  test_conquer_c3.py  test_conquer_client.py  test_conquer_map.py  test_conquer_puzzle.py  test_conquer_resource.py  test_dds.py  test_diffing.py  test_directory_inventory.py  test_elf.py  test_exporters.py  test_external_targets.py  test_game_detector.py  test_gui_module_entrypoint.py  test_gui_updates.py  test_identity.py  test_ioc.py  test_js5_cache.py  test_macho.py  test_netdragon_package.py  test_pe.py  test_scan.py  test_sqlite.py  test_strings.py  test_tool_inventory.py
(+73 files in other folders)
